--- a/WPFUI/WPFUI.csproj
+++ b/WPFUI/WPFUI.csproj
@@ -7,7 +7,33 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\cross.png" />
+    <None Remove="Resources\data-set.png" />
+    <None Remove="Resources\forward.png" />
+    <None Remove="Resources\home.png" />
+    <None Remove="Resources\input.png" />
+    <None Remove="Resources\minimize.png" />
+    <None Remove="Resources\project-icon.png" />
+    <None Remove="Resources\settings.png" />
+    <None Remove="Resources\star.png" />
+    <None Remove="Resources\train-network.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\cross.png" />
+    <Resource Include="Resources\data-set.png" />
+    <Resource Include="Resources\forward.png" />
+    <Resource Include="Resources\home.png" />
+    <Resource Include="Resources\input.png" />
+    <Resource Include="Resources\minimize.png" />
+    <Resource Include="Resources\project-icon.png" />
+    <Resource Include="Resources\settings.png" />
+    <Resource Include="Resources\star.png" />
+    <Resource Include="Resources\train-network.png" />
   </ItemGroup>
 
 </Project>
